frontend/src/index.css
html {
    position: relative;
    min-height: 100%;
}

body {
    margin-bottom: 170px;
    
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 165px;
}


.btn {
  z-index: 9999 !important; 
  color: rgb(0, 0, 0) !important; 
}

.btn:active {
  transform: scale(0.9);
}


.product_list_buttons {
  display: flex;
  margin-top: 15px;
  align-items: center;
  gap: 10px;
}

.ski_image {  
  position: absolute;
  max-width: 90%;
  margin-left: 0%;
  margin-bottom: 0% !important; /* Adding !important to ensure it takes precedence */
  bottom: 0;
  z-index: -1;  
}

.ice_cave_image {  
  position: absolute;
  max-width: 90%;
  margin-left: 0%;
  margin-right: 0%;
  margin-bottom: 0% !important; /* Adding !important to ensure it takes precedence */
  bottom: 0;
  right: 0;
  z-index: -1;
}

.cliff_image {  
  position: absolute;
  max-width: 90%;
  height: 100%;
  margin-left: 0%;  
  margin-bottom: 0% !important; /* Adding !important to ensure it takes precedence */
  bottom: 0;
  z-index: -1;  
}

.rappel_image {  
  position: absolute;
  height: 95%;
  margin-right: 0%;  
  margin-bottom: 0% !important; /* Adding !important to ensure it takes precedence */
  bottom: 0;
  right:0;
  z-index: -1;  
}

.rock_inverted_photo {  
  height: 40%;
  position: absolute;
  z-index: -1;  
}

